--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             <article>
                 <h2 id="title">MNTN</h2>
                 <p>Get out there & discover your next <br> slope, mountain & destination!</p>
+                <p> &emsp;</p>
                 <p class="copyright">Copyright 2019 MNTN, Inc. Terms & Privacy</p>
             </article>
         </div>
