--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <span class="guide">
                         <p class="numero">02</p>
                         <div class="barre-horizontal"></div> 
-                        Hiking Essentials
+                        HIKING ESSENTIALS
                     </span>
                     <h2 class="article-titre">Picking the right Hiking Gear!</h2>
                     <p class="article-description">
@@ -101,7 +101,7 @@
                     <span class="guide">
                         <p class="numero">03</p>
                         <div class="barre-horizontal"></div> 
-                        where you go is the key
+                        WHERE YOU GO IS THE KEY
                     </span>
                     <h2 class="article-titre">Understand Your Map & Timing</h2>
                     <p class="article-description">
