--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             </div>
             <aside class="aside-right">
                 <div class="start-left">
-                    <p>Start</p>
-                    <p>01</p>
-                    <p>02</p>
-                    <p>03</p>
+                    <a href="#">Start</a>
+                    <a href="#un">01</a>
+                    <a href="#deux">02</a>
+                    <a href="#trois">03</a>
                 </div>
                 <div class="barre-cote"></div>
             </aside>
         </section>
         <section id="contenu">
-            <article class="article-montagne"> <!-- article 1 -->
+            <article id="un" class="article-montagne"> <!-- article 1 -->
                 <div class="description">
                     <span class="guide">
                         <p class="numero">01</p>
@@ -78,7 +78,7 @@
                 </div>
                 <img class="article-img" src="img/01.jpg" alt="">            
             </article>
-            <article class="article-montagne"> <!-- article 2 -->
+            <article id="deux" class="article-montagne"> <!-- article 2 -->
                 <div class="description">
                     <span class="guide">
                         <p class="numero">02</p>
@@ -96,7 +96,7 @@
                 </div>
                 <img class="article-img" src="img/02.jpg" alt=""> 
             </article>
-            <article class="article-montagne">  <!-- article 2 -->
+            <article id="trois" class="article-montagne">  <!-- article 2 -->
                 <div class="description">
                     <span class="guide">
                         <p class="numero">03</p>
